--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
     <meta
-        content="Web site created using create-react-app"
+        content="Social Media App Currently In Development"
         name="description"
     />
-    <title>React App</title>
+    <title>SpeakEZ</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
